k8s/platform/gateway/templates/gateway-class.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: platform-gateway-class
spec:
  controllerName: gateway.nginx.org/nginx-gateway-controller
