k8s/platform/gateway/templates/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: platform-gateway
spec:
  gatewayClassName: platform-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
